# secure-assignment-evaluator

./: .gitignore  .replit  README.md  app.py  app.py.backup  deployment_requirements.txt  encryption.py  healthz.py  navigation.py  pdf_processor.py  pyproject.toml  render.yaml  replit.nix  requirements-streamlit.txt  secure_qa.py  text_chunker.py  utils.py  vercel.json  visualization.py
.streamlit/: config.toml
api/: index.py  requirements.txt
attached_assets/: Pasted-LookupError-Resource-93mpu-1742634873859.txt  Pasted-LookupError-Resource-93mpu-1742635014512.txt  Pasted-Restricting-the-Chatbot-to-the-PDF-Content-Only-The-biggest-challenge-is-ensuring-the-LLM-doesn-t-ha-1742633817558.txt  Pasted-streamlit-errors-StreamlitAPIException-st-session-state-question-input-cannot-be-modified-after-the-1742636803615.txt
data/: 57d0a2e4-06a9-4e22-8740-d81c0edd3e49.json  6T9nBG8L_pdf.enc  83eb10b9-a7de-4c8e-bda7-b3c1d27eb7a4.json  Eh8VT2vd_pdf.enc  KIai0IDc_pdf.enc  Lcynf4pp.json  SvPrg2I1.json  UWhwHHaZ_pdf.enc  VARoxR8f_pdf.enc  VAcw1N_F_pdf.enc  a8BDS8XM_pdf.enc  d69c6647-23e9-4cdc-aa6d-c0062cf023cd.json  df1lCR2M.json  hJB7kl--_pdf.enc  iwUtjSYx_pdf.enc
