[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "nltk>=3.9.1",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "plotly>=6.0.1",
    "streamlit>=1.43.2",
]
